header changes made

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2919,7 +2919,7 @@ hr {
     border: 1px solid rgba(0,0,0,1);
     border-radius: 0;
     /* padding: 0.375rem 0 0.375rem 0.75rem; */
-    min-width: min-content;
+    min-width: max-content;                                 /*========== change made*/
 }
 
 .custom-select:focus {
@@ -2931,7 +2931,7 @@ hr {
     border: 1px solid rgba(0,0,0,1);
     border-radius: 0;
     /* padding: 0.375rem 0 0.375rem 0.75rem; */
-    min-width: min-content;
+    min-width: max-content;                                 /*======= change made*/
 }
 
 .grid_1 {
